--- a/accounts/templates/registration/login.html
+++ b/accounts/templates/registration/login.html
@@ -22,7 +22,7 @@
                 <div class="signin-content">
                     <div class="signin-image">
                         <figure><img src="{% static 'images/signin-image.jpg'%}" alt="sing up image"></figure>
-                        <a href="#" class="signup-image-link">Create an account</a>
+                        <a href="{% url ''registration %}" class="signup-image-link">Create an account</a>
                     </div>
 
                     <div class="signin-form">
@@ -69,5 +69,5 @@
     <!-- JS -->
     <script src="{% static 'vendor/jquery/jquery.min.js'%}"></script>
     <script src="{% static 'js/main.js'%}"></script>
-</body><!-- This templates was made by Colorlib (https://colorlib.com) -->
+</body>
 </html>
