--- a/accounts/templates/registration/login.html
+++ b/accounts/templates/registration/login.html
@@ -30,12 +30,14 @@
                         <form method="POST" class="register-form" id="login-form">
                             {% csrf_token %}
                             <div class="form-group">
-                                {{form.username}}
+                                <!-- {{form.username}} -->
+                                <input type="text" name="username" placeholder="Username">
                                 <label for="your_name"><i class="zmdi zmdi-account material-icons-name"></i></label>
                                 <!-- <input type="text" name="your_name" id="your_name" placeholder="Your Name"/> -->
                             </div>
                             <div class="form-group">
-                                {{form.password}}
+                                <!-- {{form.password}} -->
+                                <input type="password" name="password" placeholder="Password">
                                 <label for="your_pass"><i class="zmdi zmdi-lock"></i></label>
                                 <!-- <input type="password" name="your_pass" id="your_pass" placeholder="Password"/> -->
                             </div>
